--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -1,6 +1,7 @@
 {
   "menu": {
     "dashboard": "Dashboard",
+    "list-book": "List Book",
     "design": "Design",
     "design.colors": "Color System",
     "design.icons": "Material Icons",
