Added menu structure and list-book form

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -2,6 +2,35 @@
   "menu": {
     "dashboard": "Dashboard",
     "listbook": "List Book",
+    "organizer": "Organizer",
+    "my-team": "My Team",
+    "my-team.teams": "Teams",
+    "my-team.rank-holders": "Rank Holders",
+    "activity-tracker": "Activity Tracker",
+    "activity-tracker.daily": "Daily",
+    "activity-tracker.weekly": "Weekly",
+    "activity-tracker.monthly": "Monthly",
+    "activity-tracker.yearly": "Yearly",
+    "goal-tracker": "Goal Tracker",
+    "goal-tracker.short-term-goals": "Short Term Goals",
+    "goal-tracker.mid-term-goals": "Mid Term Goals",
+    "goal-tracker.long-term-goals": "Short Term Goals",
+    "task-manager": "Task Manager",
+    "appointments": "Appointments",
+    "retail-manager": "Retail-Manager",
+    "retail-manager.coustomers": "Coustomers",
+    "retail-manager.stock-details": "Stock Details",
+    "retail-manager.invoice": "Invoice",
+    "retail-manager.future-orders-and-reminder": "Future Orders and Reminder",
+    "retail-manager.settings": "Settings",
+    "document-manager": "Document Manager",
+    "document-manager.tab": "Tab",
+    "transactions": "Transactions",
+    "transactions.income": "Income",
+    "transactions.expenditure": "Expenditure",
+    "contest-manager": "Contest Manager",
+    "contest-manager.settings": "Settings",
+    "contest-manager.achievers": "Achievers",    
     "design": "Design",
     "design.colors": "Color System",
     "design.icons": "Material Icons",
