Added API calls

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -117,7 +117,7 @@
   },
   "login": {
     "title": "Welcome Back",
-    "username": "Username",
+    "username": "Mobile",
     "password": "Password",
     "remember_me": "Remember Me",
     "login": "Login",
